--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "homepage": "https://github.com/Ahmad-Khaled-Zaid/Movies-Library#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "mongoose": "^6.3.2",
+    "pg": "^8.7.3"
   }
 }
